--- a/booking.html
+++ b/booking.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Consultation | OMO G Interior Decoration</title>
+<meta name="description" content="Book your interior design consultation with OMO G. Choose WhatsApp or online booking and start your project today.">
+<link rel="canonical" href="https://omoginteriors.com/booking.html">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Book Consultation | OMO G">
+<meta property="og:description" content="Book your interior design consultation with OMO G. Choose WhatsApp or online booking and start your project today.">
+<meta property="og:url" content="https://omoginteriors.com/booking.html">
+<meta property="og:image" content="https://omoginteriors.com/logo.png">
+<script type="application/ld+json">
+{
+  "": "https://schema.org",
+  "": "LocalBusiness",
+  "name": "OMO G Trading And Interior Decoration",
+  "url": "https://omoginteriors.com",
+  "image": "https://omoginteriors.com/logo.png",
+  "telephone": "+97471021381",
+  "email": "info.com",
+  "address": {
+    "": "PostalAddress",
+    "streetAddress": "Office 70, 2nd Floor Block E, Al Mirqab Mall",
+    "addressLocality": "Doha",
+    "addressCountry": "QA"
+  },
+  "sameAs": [
+    "https://www.instagram.com/omogdecor"
+  ]
+}
+</script>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -133,7 +160,7 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="renovations.html">Renovations</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="booking.html" class="cta-nav active">Book Now</a></li>
+                <li><a href="booking.html" class="cta-nav active">Book Free Consultation</a></li>
             </ul>
         </nav>
 
@@ -171,7 +198,7 @@
         <div class="booking-options">
             <div class="booking-card">
                 <div class="booking-icon">💬</div>
-                <h3>WhatsApp Booking</h3>
+                <h3>WhatsApp Us</h3>
                 <p>Get quick and instant response through WhatsApp. Perfect for urgent inquiries and immediate scheduling.</p>
                 <ul class="booking-benefits">
                     <li>✓ Instant messaging</li>
@@ -179,7 +206,7 @@
                     <li>✓ Share photos easily</li>
                     <li>✓ Direct communication</li>
                 </ul>
-                <button class="booking-btn" onclick="window.open('https://wa.me/97471021381?text=Hello!%20I%20would%20like%20to%20book%20a%20consultation%20for%20interior%20design.', '_blank')">Book via WhatsApp</button>
+                <button class="booking-btn" onclick="window.open('https://wa.me/97471021381?text=Hello!%20I%20would%20like%20to%20book%20a%20consultation%20for%20interior%20design.', '_blank')">WhatsApp Us</button>
             </div>
             <div class="booking-card">
                 <div class="booking-icon">📋</div>
@@ -191,7 +218,7 @@
                     <li>✓ Direct to email</li>
                     <li>✓ Better planning</li>
                 </ul>
-                <button class="booking-btn" onclick="window.location.href='booking-form-formspree.html'">Book via Online Form</button>
+                <button class="booking-btn" onclick="window.location.href='booking-form-formspree.html'">Book Free Consultation</button>
             </div>
         </div>
     </section>
@@ -349,8 +376,8 @@
             <h2>Don't Wait to Create Your Dream Space</h2>
             <p>Book your consultation today</p>
             <div class="cta-buttons">
-                <button class="btn-primary" onclick="window.open('https://wa.me/97471021381?text=Hello!', '_blank')" style="margin-right: 1rem;">WhatsApp Booking</button>
-                <button class="btn-primary" onclick="window.location.href='booking-form-formspree.html'">Online Form Booking</button>
+                <button class="btn-primary" onclick="window.open('https://wa.me/97471021381?text=Hello!', '_blank')" style="margin-right: 1rem;">WhatsApp Us</button>
+                <button class="btn-primary" onclick="window.location.href='booking-form-formspree.html'">Book Free Consultation</button>
             </div>
         </div>
     </section>
@@ -370,7 +397,8 @@
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="booking.html">Book Now</a></li>
+                    <li><a href="booking.html">Book Free Consultation</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="privacy-policy.html">Privacy Policy</a></li>
                 </ul>
             </div>
