--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,33 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact Us | OMO G Interior Decoration</title>
+<meta name="description" content="Contact OMO G for interior design consultations, project inquiries, and WhatsApp support in Qatar.">
+<link rel="canonical" href="https://omoginteriors.com/contact.html">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Contact OMO G Interior Decoration">
+<meta property="og:description" content="Contact OMO G for interior design consultations, project inquiries, and WhatsApp support in Qatar.">
+<meta property="og:url" content="https://omoginteriors.com/contact.html">
+<meta property="og:image" content="https://omoginteriors.com/logo.png">
+<script type="application/ld+json">
+{
+  "": "https://schema.org",
+  "": "LocalBusiness",
+  "name": "OMO G Trading And Interior Decoration",
+  "url": "https://omoginteriors.com",
+  "image": "https://omoginteriors.com/logo.png",
+  "telephone": "+97471021381",
+  "email": "info.com",
+  "address": {
+    "": "PostalAddress",
+    "streetAddress": "Office 70, 2nd Floor Block E, Al Mirqab Mall",
+    "addressLocality": "Doha",
+    "addressCountry": "QA"
+  },
+  "sameAs": [
+    "https://www.instagram.com/omogdecor"
+  ]
+}
+</script>
 
 <!-- Favicon -->
 <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -135,7 +162,7 @@ body {
 <li><a href="portfolio.html">Portfolio</a></li>
 <li><a href="renovations.html">Renovations</a></li>
 <li><a href="contact.html" class="active">Contact</a></li>
-<li><a href="booking.html" class="cta-nav">Book Now</a></li>
+<li><a href="booking.html" class="cta-nav">Book Free Consultation</a></li>
 </ul>
 </nav>
 
@@ -176,7 +203,7 @@ body {
 </div>
 <h3>WhatsApp</h3>
 <p>Quick and instant messaging for urgent inquiries</p>
-<a href="https://wa.me/97471021381" target="_blank">Chat on WhatsApp</a>
+<a href="https://wa.me/97471021381" target="_blank">WhatsApp Us</a>
 </div>
 <div class="contact-card">
 <div class="contact-icon">📍</div>
@@ -248,8 +275,9 @@ class="address-link">
 <li><a href="portfolio.html">Portfolio</a></li>
 <li><a href="renovations.html">Renovations</a></li>
 <li><a href="contact.html">Contact</a></li>
-<li><a href="booking.html">Book Now</a></li>
-<li><a href="privacy-policy.html">Privacy Policy</a></li>
+<li><a href="booking.html">Book Free Consultation</a></li>
+<li><a href="faq.html">FAQ</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
 </ul>
 </div>
 <div class="footer-section">
