--- a/index.html
+++ b/index.html
@@ -554,7 +554,8 @@
 <li><a href="renovations.html">Renovations</a></li>
 <li><a href="contact.html">Contact</a></li>
 <li><a href="booking.html">Book Free Consultation</a></li>
-<li><a href="privacy-policy.html">Privacy Policy</a></li>
+<li><a href="faq.html">FAQ</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
 </ul>
 </div>
 <div class="footer-section">
