--- a/services.html
+++ b/services.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services | OMO G Interior Decoration</title>
+<meta name="description" content="Explore OMO G interior design services including fit-out, renovation, furnishing, space planning, and premium finishing in Qatar.">
+<link rel="canonical" href="https://omoginteriors.com/services.html">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Interior Design Services | OMO G">
+<meta property="og:description" content="Explore OMO G interior design services including fit-out, renovation, furnishing, space planning, and premium finishing in Qatar.">
+<meta property="og:url" content="https://omoginteriors.com/services.html">
+<meta property="og:image" content="https://omoginteriors.com/logo.png">
+<script type="application/ld+json">
+{
+  "": "https://schema.org",
+  "": "LocalBusiness",
+  "name": "OMO G Trading And Interior Decoration",
+  "url": "https://omoginteriors.com",
+  "image": "https://omoginteriors.com/logo.png",
+  "telephone": "+97471021381",
+  "email": "info.com",
+  "address": {
+    "": "PostalAddress",
+    "streetAddress": "Office 70, 2nd Floor Block E, Al Mirqab Mall",
+    "addressLocality": "Doha",
+    "addressCountry": "QA"
+  },
+  "sameAs": [
+    "https://www.instagram.com/omogdecor"
+  ]
+}
+</script>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -172,7 +199,7 @@ body {
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="renovations.html">Renovations</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="booking.html">Book Now</a></li>
+                <li><a href="booking.html">Book Free Consultation</a></li>
             </ul>
         </nav>
 
@@ -360,7 +387,7 @@ body {
             <div class="compliance-card">
                 <h3>Project Documentation & Handover</h3>
                 <p>
-                    Comprehensive documentation including as built drawings, warranties, and
+                    Comprehensive documentation including as-built drawings, warranties, and
                     maintenance guides are provided upon project completion.
                 </p>
             </div>
@@ -371,7 +398,7 @@ body {
         <div class="cta-content">
             <h2>Ready to Get Started?</h2>
             <p>Book a consultation to discuss your project</p>
-            <a href="booking.html" class="btn-primary">Book Now</a>
+            <a href="booking.html" class="btn-primary">Book Free Consultation</a>
         </div>
     </section>
 
@@ -390,7 +417,8 @@ body {
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="booking.html">Book Now</a></li>
+                    <li><a href="booking.html">Book Free Consultation</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="privacy-policy.html">Privacy Policy</a></li>
                 </ul>
             </div>
