--- a/about.html
+++ b/about.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | OMO G Interior Decoration</title>
+<meta name="description" content="Learn about OMO G Trading And Interior Decoration, our design process, values, and project delivery approach across Qatar.">
+<link rel="canonical" href="https://omoginteriors.com/about.html">
+<meta property="og:type" content="website">
+<meta property="og:title" content="About OMO G Interior Decoration">
+<meta property="og:description" content="Learn about OMO G Trading And Interior Decoration, our design process, values, and project delivery approach across Qatar.">
+<meta property="og:url" content="https://omoginteriors.com/about.html">
+<meta property="og:image" content="https://omoginteriors.com/logo.png">
+<script type="application/ld+json">
+{
+  "": "https://schema.org",
+  "": "LocalBusiness",
+  "name": "OMO G Trading And Interior Decoration",
+  "url": "https://omoginteriors.com",
+  "image": "https://omoginteriors.com/logo.png",
+  "telephone": "+97471021381",
+  "email": "info.com",
+  "address": {
+    "": "PostalAddress",
+    "streetAddress": "Office 70, 2nd Floor Block E, Al Mirqab Mall",
+    "addressLocality": "Doha",
+    "addressCountry": "QA"
+  },
+  "sameAs": [
+    "https://www.instagram.com/omogdecor"
+  ]
+}
+</script>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -119,7 +146,7 @@ body {
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="renovations.html">Renovations</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="booking.html" class="cta-nav">Book Now</a></li>
+                <li><a href="booking.html" class="cta-nav">Book Free Consultation</a></li>
             </ul>
         </nav>
 
@@ -324,7 +351,8 @@ body {
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="renovations.html">Renovations</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="booking.html">Book Now</a></li>
+                    <li><a href="booking.html">Book Free Consultation</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="privacy-policy.html">Privacy Policy</a></li>
                 </ul>
             </div>
