--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,15 @@
 <meta property="og:image" content="https://omoginteriors.com/logo.png">
 <script type="application/ld+json">
 {
-  "": "https://schema.org",
-  "": "LocalBusiness",
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
   "name": "OMO G Trading And Interior Decoration",
   "url": "https://omoginteriors.com",
   "image": "https://omoginteriors.com/logo.png",
   "telephone": "+97471021381",
-  "email": "info.com",
+  "email": "info@omoginteriors.com",
   "address": {
-    "": "PostalAddress",
+    "@type": "PostalAddress",
     "streetAddress": "Office 70, 2nd Floor Block E, Al Mirqab Mall",
     "addressLocality": "Doha",
     "addressCountry": "QA"
@@ -189,7 +189,7 @@ body {
 <div class="contact-icon">📧</div>
 <h3>Email Us</h3>
 <p>Send us your queries and we'll respond within 24 hours</p>
-<a href="mailto:info@omoginteriors.com" style="color:black; text-decoration:none;">info@omoginteriors.com</a>
+<a href="/cdn-cgi/l/email-protection#cfa6a1a9a08fa0a2a0a8a6a1bbaabda6a0bdbce1aca0a2" style="color:black; text-decoration:none;"><span class="__cf_email__" data-cfemail="86efe8e0e9c6e9ebe9e1efe8f2e3f4efe9f4f5a8e5e9eb">[email&#160;protected]</span></a>
 </div>
 <div class="contact-card">
 <div class="contact-icon">📱</div>
@@ -238,7 +238,7 @@ class="address-link">
 <div class="location-info" style="display: flex; gap: 2rem; align-items: flex-start; flex-wrap: wrap;">
 <div class="footer-section" style="flex: 1; min-width: 300px;">
 <h3>Contact Info</h3>
-<p>📧 <a href="mailto:info@omoginteriors.com" style="text-decoration:none; color:inherit;">info@omoginteriors.com</a></p>
+<p>📧 <a href="/cdn-cgi/l/email-protection#9df4f3fbf2ddf2f0f2faf4f3e9f8eff4f2efeeb3fef2f0" style="text-decoration:none; color:inherit;"><span class="__cf_email__" data-cfemail="0f666169604f6062606866617b6a7d66607d7c216c6062">[email&#160;protected]</span></a></p>
 <p>📱 <a href="tel:+97471021381" style="text-decoration:none; color:inherit;">+974 7102 1381</a></p>
 <p>📍 <a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA" target="_blank" style="text-decoration:none; color:inherit;">
                     Office 70, 2nd Floor Block E,<br>
@@ -282,7 +282,7 @@ class="address-link">
 </div>
 <div class="footer-section">
 <h3>Contact Info</h3>
-<p>📧 <a href="mailto:info@omoginteriors.com" style="color:white; text-decoration:none;">info@omoginteriors.com</a></p>
+<p>📧 <a href="/cdn-cgi/l/email-protection#a5cccbc3cae5cac8cac2cccbd1c0d7cccad7d68bc6cac8" style="color:white; text-decoration:none;"><span class="__cf_email__" data-cfemail="5e373038311e3133313937302a3b2c37312c2d703d3133">[email&#160;protected]</span></a></p>
 <p>📱 <a href="tel:+97471021381" style="color:white; text-decoration:none;">+974 7102 1381</a></p>
 <p>📍 <a href="https://maps.app.goo.gl/rsr4JFFG5bv3B2NYA" target="_blank" style="color:white; text-decoration:none;">Office 70, 2nd Floor Block F, Al Mirqab Mall, Doha, Qatar</a></p>
 </div>
@@ -296,7 +296,7 @@ class="address-link">
 <path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/></svg>
 </a>
 
-<script src="script.js"></script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="script.js"></script>
 <script type="text/javascript">
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({
@@ -314,20 +314,4 @@ function googleTranslateElementInit() {
           var value = options[i].value;
           switch(value) {
             case '':   options[i].text = 'Select Language'; break;
-            case 'ar': options[i].text = 'Arabic'; break;
-            case 'en': options[i].text = 'English'; break;
-            case 'es': options[i].text = 'Spanish'; break;
-            case 'fr': options[i].text = 'French'; break;
-            case 'hi': options[i].text = 'Hindi'; break;
-            case 'ur': options[i].text = 'Urdu'; break;
-          }
-        }
-        clearInterval(checkDropdown);
-    }
-  }, 100);
-}
-</script>
-<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit&hl=en"></script>
-
-</body>
-</html>
+            case 'ar': options[i].text = 'Arabic'; break
