--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 </script>
 
 <!-- Favicon -->
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
-<link rel="manifest" href="site.webmanifest">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
+<link rel="manifest" href="/site.webmanifest">
 
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="/styles.css">
 <style>
     /* Keeps the translate widget clean and aligned */
     #google_translate_element {
@@ -78,7 +78,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background-image: url('livingroom.jpg');
+        background-image: url('/livingroom.jpg');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -341,9 +341,9 @@
 <body>
 <header id="header">
 <nav>
-<a href="index.html" class="logo-container" style="text-decoration: none; color: inherit;">
+<a href="/" class="logo-container" style="text-decoration: none; color: inherit;">
 <div class="logo-icon">
-<img src="logo.png" alt="OMO G Logo" style="width: 100px; height: 100px; object-fit: contain;">
+<img src="/logo.png" alt="OMO G Logo" style="width: 100px; height: 100px; object-fit: contain;">
 </div>
 <div class="logo-text">
 <h1>OMO G INTERIOR DECORATION</h1>
@@ -355,13 +355,13 @@
 <span class="close-icon">✕</span>
 </button>
 <ul id="navMenu">
-<li><a href="index.html" class="active">Home</a></li>
-<li><a href="about.html">About Us</a></li>
-<li><a href="services.html">Services</a></li>
-<li><a href="portfolio.html">Portfolio</a></li>
-<li><a href="renovations.html">Renovations</a></li>
-<li><a href="contact.html">Contact</a></li>
-<li><a href="booking.html">Book Free Consultation</a></li>
+<li><a href="/" class="active">Home</a></li>
+<li><a href="/about">About Us</a></li>
+<li><a href="/services">Services</a></li>
+<li><a href="/portfolio">Portfolio</a></li>
+<li><a href="/renovations">Renovations</a></li>
+<li><a href="/contact">Contact</a></li>
+<li><a href="/booking">Book Free Consultation</a></li>
 </ul>
 </nav>
 
@@ -381,8 +381,8 @@
 <p class="hero-tagline">Bespoke Interior Design for Qatar's Most Discerning Clients</p>
 <p>From contemporary elegance to timeless sophistication, we transform your space into a masterpiece that reflects your unique story</p>
 <div class="hero-buttons">
-<a href="booking.html" class="btn-primary">Book Free Consultation</a>
-<a href="portfolio.html" class="btn-secondary">Explore Our Work</a>
+<a href="/booking" class="btn-primary">Book Free Consultation</a>
+<a href="/portfolio" class="btn-secondary">Explore Our Work</a>
 </div>
 <div class="trust-strip">
 <span>CR No: 235664</span><span class="trust-dot">•</span>
@@ -436,7 +436,7 @@
 </div>
 </div>
 <div style="text-align: center; margin-top: 3rem;">
-<a href="services.html" class="btn-primary">View All Services</a>
+<a href="/services" class="btn-primary">View All Services</a>
 </div>
 </section>
 
@@ -454,21 +454,21 @@
 </div>
 </div>
 <div class="portfolio-item" onclick="openLightbox(this)">
-<img src="livingroom.jpg" alt="Plush Living Room">
+<img src="/livingroom.jpg" alt="Plush Living Room">
 <div class="portfolio-overlay">
 <h3>Plush Living Room Interior</h3>
 <p>Rich textures and elegant furnishings</p>
 </div>
 </div>
 <div class="portfolio-item" onclick="openLightbox(this)">
-<img src="dining.jpg" alt="Dining Interior">
+<img src="/dining.jpg" alt="Dining Interior">
 <div class="portfolio-overlay">
 <h3>Exquisite Dining Interior</h3>
 <p>Luxurious finishes with contemporary elegance</p>
 </div>
 </div>
 <div class="portfolio-item" onclick="openLightbox(this)">
-<img src="master.jpg" alt="Master Bedroom">
+<img src="/master.jpg" alt="Master Bedroom">
 <div class="portfolio-overlay">
 <h3>Master Bedroom Retreat</h3>
 <p>Serene sanctuary with bespoke details</p>
@@ -476,7 +476,7 @@
 </div>
 </div>
 <div style="text-align: center; margin-top: 3rem;">
-<a href="portfolio.html" class="btn-primary">View Full Portfolio</a>
+<a href="/portfolio" class="btn-primary">View Full Portfolio</a>
 </div>
 </section>
 
@@ -534,7 +534,7 @@
 <div class="cta-content">
 <h2>Ready to Transform Your Space?</h2>
 <p>Let's create something beautiful together</p>
-<a href="booking.html" class="btn-primary">Book Free Consultation</a>
+<a href="/booking" class="btn-primary">Book Free Consultation</a>
 </div>
 </section>
 
@@ -547,15 +547,15 @@
 <div class="footer-section">
 <h3>Quick Links</h3>
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About Us</a></li>
-<li><a href="services.html">Services</a></li>
-<li><a href="portfolio.html">Portfolio</a></li>
-<li><a href="renovations.html">Renovations</a></li>
-<li><a href="contact.html">Contact</a></li>
-<li><a href="booking.html">Book Free Consultation</a></li>
-<li><a href="faq.html">FAQ</a></li>
-                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+<li><a href="/">Home</a></li>
+<li><a href="/about">About Us</a></li>
+<li><a href="/services">Services</a></li>
+<li><a href="/portfolio">Portfolio</a></li>
+<li><a href="/renovations">Renovations</a></li>
+<li><a href="/contact">Contact</a></li>
+<li><a href="/booking">Book Free Consultation</a></li>
+<li><a href="/faq">FAQ</a></li>
+                    <li><a href="/privacy-policy">Privacy Policy</a></li>
 </ul>
 </div>
 <div class="footer-section">
@@ -630,7 +630,7 @@ function googleTranslateElementInit() {
 
 <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit&hl=en"></script>
 
-<script src="script.js"></script>
+<script src="/script.js"></script>
 <script>
 // Counter animation for stats
 document.addEventListener("DOMContentLoaded", () => {
