--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,15 +13,15 @@
 <meta property="og:image" content="https://omoginteriors.com/logo.png">
 <script type="application/ld+json">
 {
-  "": "https://schema.org",
-  "": "LocalBusiness",
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
   "name": "OMO G Trading And Interior Decoration",
   "url": "https://omoginteriors.com",
   "image": "https://omoginteriors.com/logo.png",
   "telephone": "+97471021381",
-  "email": "info.com",
+  "email": "info@omoginteriors.com",
   "address": {
-    "": "PostalAddress",
+    "@type": "PostalAddress",
     "streetAddress": "Office 70, 2nd Floor Block E, Al Mirqab Mall",
     "addressLocality": "Doha",
     "addressCountry": "QA"
