--- a/booking-form-formspree/index.html
+++ b/booking-form-formspree/index.html
@@ -293,7 +293,8 @@
                         <option value="QAR 25,000 - 50,000">QAR 25,000 - 50,000</option>
                         <option value="QAR 50,000 - 100,000">QAR 50,000 - 100,000</option>
                         <option value="QAR 100,000 - 500,000">QAR 100,000 - 500,000</option>
-                        <option value="Over QAR 500,000">Over QAR 500,000</option>
+                        
+                        <option value="Other amounts">Other amounts</option>
                     </select>
                 </div>
 
