--- a/booking/index.html
+++ b/booking/index.html
@@ -218,7 +218,7 @@
                     <li>✓ Direct to email</li>
                     <li>✓ Better planning</li>
                 </ul>
-                <button class="booking-btn" onclick="window.location.href = '/booking-form-formspree'">Book Free Consultation</button>
+                <button class="booking-btn" onclick="window.location.href = '/form'">Book Free Consultation</button>
             </div>
         </div>
     </section>
@@ -377,7 +377,7 @@
             <p>Book your consultation today</p>
             <div class="cta-buttons">
                 <button class="btn-primary" onclick="window.open('https://wa.me/97471021381?text=Hello!', '_blank')" style="margin-right: 1rem;">WhatsApp Us</button>
-                <button class="btn-primary" onclick="window.location.href = '/booking-form-formspree'">Book Free Consultation</button>
+                <button class="btn-primary" onclick="window.location.href = '/form'">Book Free Consultation</button>
             </div>
         </div>
     </section>
