--- a/form/index.html
+++ b/form/index.html
@@ -280,8 +280,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="date">Preferred Consultation Date <span class="required">*</span></label>
-                    <input type="date" id="date" name="date" required>
+                    <label for="date">Preferred Consultation Date and Time <span class="required">*</span></label>
+                    <input type="datetime-local" id="date" name="date" required>
                 </div>
 
                 <div class="form-group">
@@ -370,10 +370,12 @@
             }
         }
 
-        // Set minimum date to today
+        // Set minimum date and time to now
         const dateInput = document.getElementById('date');
-        const today = new Date().toISOString().split('T')[0];
-        dateInput.setAttribute('min', today);
+        const now = new Date();
+        const pad = (n) => String(n).padStart(2, '0');
+        const minDateTime = now.getFullYear() + '-' + pad(now.getMonth() + 1) + '-' + pad(now.getDate()) + 'T' + pad(now.getHours()) + ':' + pad(now.getMinutes());
+        dateInput.setAttribute('min', minDateTime);
 
         const form = document.getElementById('bookingForm');
         const submitBtn = document.getElementById('submitBtn');
