--- a/form/index.html
+++ b/form/index.html
@@ -294,7 +294,7 @@
                         <option value="QAR 50,000 - 100,000">QAR 50,000 - 100,000</option>
                         <option value="QAR 100,000 - 500,000">QAR 100,000 - 500,000</option>
                         
-                        <option value="Other amounts">Other amounts</option>
+                        <option value="Other amounts">Other Amounts</option>
                     </select>
                 </div>
 
